...
     */

    Box(
        modifier = Modifier
            .fillMaxWidth()
            .semantics { isTraversalGroup = true }
            .testTag("SearchTopBar")
    ) {
        SearchBar(
            modifier = Modifier
                .align(Alignment.TopCenter)
                .semantics { traversalIndex = 0f },
            inputField = {
...
                                Icons.Default.Search,
                                contentDescription = stringResource(R.string.search)
                            )
                        }
                    },
                    trailingIcon = {
                        MenuButton(
                            expanded = menuExpanded,
                            onExpandedChange = { menuExpanded = it },
                            navController = navController
                        )
                    }
                )
...
