...
    } else {
        NavHost(
            navController = navController,
            startDestination = "home"
        ) {
            composable("home") {
                HomeScreen(viewModel, navController)
            }

            // ReadMeDocScreen
            composable("readmeScreen") {
                ReadMeDocScreen(navController)
            }
...
